# ldr_tools_blender

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
.github/workflows/: release.yml
ldr_tools/: Cargo.toml  README.md
ldr_tools/src/: color.rs  edge_split.rs  geometry.rs  ldraw.rs  lib.rs  normal.rs  pe_tex_info.rs  slope.rs
ldr_tools/src/ldraw/: error.rs  parse.rs
ldr_tools_blender/: __init__.py  colors.py  importldr.py  material.py  node_dsl.py  operator.py
ldr_tools_py/: Cargo.toml  __init__.py  ldr_tools_py.pyi  stub_helpers.pyi
ldr_tools_py/src/: lib.rs
models/: colors.ldr  slopes.ldr
