[package]
name = "ldr_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.25.0"
weldr = { git = "https://github.com/ScanMountGoat/weldr", rev = "a26a0c7" }
rstar = "0.10.0"
rayon = "1.7.0"
phf =  { version = "0.11.1", features = ["macros"] }
tracing = "0.1"
zip = "2.2.0"

[dev-dependencies]
indoc = "2"
approx = "0.5.1"
