[package]
name = "ldr_tools"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.30.3"
rayon = "1.7.0"
phf =  { version = "0.13.1", features = ["macros"] }
tracing = "0.1"
base64 = "0.22.1"
zip = "5.1.1"
nom = "8.0.0"
log = "0.4"

[dev-dependencies]
indoc = "2"
approx = "0.5.1"
pretty_assertions = "1.4.1"
