[package]
name = "ldr_tools_py"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "py-clone"] }
numpy = "0.25.0"
ldr_tools = { path = "../ldr_tools" }
log = "0.4"

[build-dependencies]
pyo3-build-config = "0.25.0"

[lib]
name = "ldr_tools_py"
crate-type = ["cdylib"]
