[package]
name = "ldr_tools_py"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module", "py-clone"] }
map_py = { git = "https://github.com/ScanMountGoat/map_py", rev = "b8a6e68" }
numpy = "0.26.0"
ldr_tools = { path = "../ldr_tools" }
pyo3-log = "0.13.0"
log = "0.4"

[build-dependencies]
pyo3-build-config = "0.26.0"

[lib]
name = "ldr_tools_py"
crate-type = ["cdylib"]
